--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,5 @@
     <string name="form_steps">Type steps</string>
     <string name="form_ingredients">Type ingredients</string>
     <string name="form_steps_ingredients_text_input_height">130dp</string>
-    <string name="action_gallery_only">Gallery Only</string>
+    <string name="action_gallery_only">Pick a Photo</string>
 </resources>
