--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,13 @@
     <string name="count">Count:</string>
     <string name="buy">Buy</string>
 
+    <string name="rent_name">Rent</string>
+    <string name="hourly_rental">Hourly Rental</string>
+    <string name="type_items">Type items</string>
+    <string name="buffet_sets">Buffet Sets</string>
+    <string name="hours">Hours</string>
+    <string name="rs_5160">Rs. 5160/=</string>
+
     <string name="form_steps_ingredients_text_input_height">130dp</string>
     <string name="action_gallery_only">Pick a Photo</string>
 </resources>
