Set card to delivery buy

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Nexter Chef</string>
+    <string name="app_name">Wattoruwa</string>
     <string name="delete">delete item</string>
     <string name="save">save item</string>
     <string name="action_button_desc">foo</string>
