Set horizontal number picker to card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,14 @@
     <string name="action_gallery_only">Pick a Photo</string>
 
     <string name="recipes">Recipes</string>
+
+    <string name="number_picker_formatter">%02d</string>
+
+    <!-- Font -->
+    <string name="roboto_regular">sans-serif</string>
+    <string name="roboto_light">sans-serif-light</string>
+    <string name="roboto_condensed">sans-serif-condensed</string>
+    <string name="roboto_thin">sans-serif-thin</string>
+    <string name="roboto_medium">sans-serif-medium</string>
+
 </resources>
